--- a/Client/src/components/styles.css
+++ b/Client/src/components/styles.css
@@ -149,26 +149,38 @@ nav li {
     color: white;
 }
 
-.pulse:hover, 
-.pulse:focus {
-  animation: pulse 1s;
-  box-shadow: 0 0 0 2em rgba(#fff,0);
-}
-.btn-product {
-    background: none;
-    border: 2px solid;
-    font: inherit;
-    line-height: 1;
-    margin: 0.5em;
-    padding: 2em 2em;
-    border: 3px solid black;
-    box-shadow: 0 0 20px
-  }
+
 .btn-product_cont{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
 }
+
+.btn-product{
+    display:inline-block;
+      
+      font:normal normal 300 1.3em 'Open Sans';
+      text-decoration:none;	
+      
+      color: red;
+      background-color:transparent;
+      border:1px solid red;
+      border-radius:100px;
+      
+      
+      padding: .3em 1.2em;
+      margin:5px;
+              
+      background-size: 200% 100%;	
+      background-image: linear-gradient(to right, transparent 50%, rgba(28, 190, 131, 1) 50%);
+      transition: background-position .3s cubic-bezier(0.19, 1, 0.22, 1) .1s, color .5s ease 0s, background-color .5s ease;
+  }
+  
+  .btn-product:hover{
+      color:rgba(255, 255, 255, 1);
+      background-color:rgba(28, 190, 131, 1);
+      background-position: -100% 100%;
+  }
   
   
 
